fix: close html tag and use same notation as in view.html

--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -344,7 +344,8 @@
       data-page='show'
       data-type='{{ Entity.type }}'
       data-locale='{{ App.Users.userData.lang }}'
-      data-limit='{{ DisplayParams.limit }}'>
+      data-limit='{{ DisplayParams.limit }}'
+  >
   </div>
 </div>
 
