button inside link not necessary

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -558,9 +558,7 @@
     <p><a target='_blank' rel='noopener' href='https://doc.elabftw.net/saml.html'>{{ 'Link to documentation'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></p>
     <!-- VIEW METADATA.xml button: the div around the button is necessary or the button itself gets resized on small viewports -->
     <div>
-      <a href='metadata.php' target='_blank' rel='noopener'>
-        <button type='button' class='btn btn-secondary' >{{ 'View metadata.xml'|trans }}</button>
-      </a>
+      <a href='metadata.php' target='_blank' rel='noopener' class='btn btn-secondary'>{{ 'View metadata.xml'|trans }}</a>
     </div>
   </div>
 
