add type=button and more aria-labels

--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -297,7 +297,7 @@
 
     {# SUBMIT #}
     <div class='col-md-12 text-center mt-2'>
-      <button data-action='create-user' class='btn btn-primary'>{{ 'Create'|trans }}</button>
+      <button type='button' data-action='create-user' class='btn btn-primary'>{{ 'Create'|trans }}</button>
     </div>
   </div>
 </div>
