--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -9,7 +9,7 @@
     <ul>
     {% for user in unvalidatedUsersArr %}
       <li>
-        {{ user.fullname|raw }} ({{ user.email }}) <button class='btn btn-primary' data-action='validate-user' data-userid='{{ user.userid }}'>{{ 'Validate'|trans }}</button> <button class='btn btn-danger' data-action='destroy-user' data-userid='{{ user.userid }}'>{{ 'Delete'|trans }}</button>
+        {{ user.fullname|raw }} ({{ user.email }}) <button type='button' class='btn btn-primary' data-action='validate-user' data-userid='{{ user.userid }}'>{{ 'Validate'|trans }}</button> <button  type='button' class='btn btn-danger' data-action='destroy-user' data-userid='{{ user.userid }}'>{{ 'Delete'|trans }}</button>
       </li>
     {% endfor %}
     </ul>
@@ -138,11 +138,11 @@
       <!-- [html-validate-disable-block element-permitted-content, no-deprecated-attr, prefer-native-element, text-content -- suppress errors from tinymce] -->
     {%- endif %}
     <textarea style='height:400px' class='mceditable' name="common_template" id='common_template'>
-        {{ App.teamArr.common_template|raw }}
+      {{ App.teamArr.common_template|raw }}
     </textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
-      <button data-action='patch-team-common-template' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+      <button type='button' data-action='patch-team-common-template' class='btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
     <hr>
 
@@ -150,7 +150,7 @@
     <textarea style='height:400px' class='markdown-textarea form-control mt-2' name="common_template_md" id='common_template_md'>{{ App.teamArr.common_template_md|raw }}</textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
-      <button data-action='patch-team-common-template-md' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+      <button type='button' data-action='patch-team-common-template-md' class='btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
 
   </div>
@@ -248,11 +248,11 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ cat.id }}' class='btn btn-primary' data-target='expcat' data-action='update-status'>{{ 'Save'|trans }}</button>
+              <button type='button' data-id='{{ cat.id }}' class='btn btn-primary' data-target='expcat' data-action='update-status'>{{ 'Save'|trans }}</button>
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ cat.id }}' data-target='experiments_categories' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button type='button' data-id='{{ cat.id }}' data-target='experiments_categories' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
@@ -280,7 +280,7 @@
   {% else %}
       <ul class='list-group form-group sortable' data-axis='y' data-table='items_types'>
         {% for itemType in itemsCategoryArr %}
-        <li class='box' id='itemstypes_{{ itemType.id }}' style='color: #{{ itemType.color }}'><span class='sortableHandle draggable mr-2'><i class='fas fa-grip-vertical fa-fw'></i></span><a href='?tab=4&templateid={{ itemType.id }}#resourcesCategoriesAnchor'><span class='p-2 mr-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></span></a>{{ itemType.title|raw }}</li>
+        <li class='box' id='itemstypes_{{ itemType.id }}' style='color: #{{ itemType.color }}'><span class='sortableHandle draggable mr-2'><i class='fas fa-grip-vertical fa-fw'></i></span><a href='?tab=4&templateid={{ itemType.id }}#resourcesCategoriesAnchor' aria-label='{{ 'Edit'|trans }} {{ itemType.title|raw }}' title='{{ 'Edit'|trans }}'><span class='p-2 mr-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></span></a>{{ itemType.title|raw }}</li>
         {% endfor %}
       </ul>
       <p>{{ 'Use the handles to adjust the order in which the categories appear in the application.'|trans }}</p>
@@ -289,7 +289,7 @@
     {# templateData will be loaded with content from an item type if templateid is present is url #}
     {% if Entity.entityData %}
       <div class='float-right'>
-        <button class='btn btn-danger' data-id='{{ Entity.id }}' data-action='itemstypes-destroy'>{{ 'Delete'|trans }}</button>
+        <button type='button' class='btn btn-danger' data-id='{{ Entity.id }}' data-action='itemstypes-destroy'>{{ 'Delete'|trans }}</button>
       </div>
       <ul class='list-inline'>
         <li class='list-inline-item'>
@@ -309,7 +309,7 @@
       <div>
         <textarea class='mceditable' id='itemsTypesBody'>{{ Entity.entityData.body }}</textarea>
         <div class='text-center mt-3'>
-          <button class='btn btn-primary' data-id='{{ Entity.id }}' data-action='itemstypes-update'>{{ 'Save'|trans }}</button>
+          <button type='button' class='btn btn-primary' data-id='{{ Entity.id }}' data-action='itemstypes-update'>{{ 'Save'|trans }}</button>
         </div>
       </div>
 
@@ -364,11 +364,11 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' class='btn btn-primary' data-target='experiments' data-action='update-status'>{{ 'Save'|trans }}</button>
+              <button type='button' data-id='{{ status.id }}' class='btn btn-primary' data-target='experiments' data-action='update-status'>{{ 'Save'|trans }}</button>
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' data-target='experiments_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button type='button' data-id='{{ status.id }}' data-target='experiments_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
@@ -411,11 +411,11 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' class='btn btn-primary' data-target='items' data-action='update-status'>{{ 'Save'|trans }}</button>
+              <button type='button' data-id='{{ status.id }}' class='btn btn-primary' data-target='items' data-action='update-status'>{{ 'Save'|trans }}</button>
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' data-target='items_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button type='button' data-id='{{ status.id }}' data-target='items_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
@@ -454,7 +454,7 @@
     <hr>
 
     <div class='my-2 text-center'>
-      <button data-action='export-category' class='btn btn-primary'>{{ 'Export'|trans }}</button>
+      <button type='button' data-action='export-category' class='btn btn-primary'>{{ 'Export'|trans }}</button>
     </div>
   </div>
 
@@ -485,7 +485,7 @@
     <hr>
 
     <div class='mt-2 text-center'>
-      <button data-action='export-user' class='btn btn-primary'>{{ 'Export'|trans }}</button>
+      <button type='button' data-action='export-user' class='btn btn-primary'>{{ 'Export'|trans }}</button>
     </div>
 
   </div>
@@ -506,7 +506,7 @@
     <hr>
 
     <div class='mt-2 text-center'>
-      <button data-action='export-scheduler' class='btn btn-primary'>{{ 'Export'|trans }}</button>
+      <button type='button' data-action='export-scheduler' class='btn btn-primary'>{{ 'Export'|trans }}</button>
     </div>
   </div>
 </div>
@@ -527,7 +527,7 @@
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Manage tags of the team'|trans }}</h3>
   <div class='pl-3'>
 
-    <button class='btn btn-primary' data-action='deduplicate-tag'><i class='fas fa-clone mr-1 text-white'></i>{{ 'Deduplicate'|trans }}</button>
+    <button type='button' class='btn btn-primary' data-action='deduplicate-tag'><i class='fas fa-clone mr-1 text-white'></i>{{ 'Deduplicate'|trans }}</button>
     <div class='mt-2' id='tagMgrDiv'>
       <table class='table' aria-label='Tags of the team' data-table-sort='true'>
         <thead>
@@ -545,17 +545,17 @@
               <td><span class='tag editable hl-hover' data-id='{{ tag.id }}'>{{ tag.tag|raw }}</span></td>
               <td>{{ tag.item_count }}</td>
               <td>
-                <a title='{{ 'Show tagged experiments'|trans }}' href='experiments.php?mode=show&tags[]={{ tag.tag|url_encode }}'>
+                <a title='{{ 'Show tagged experiments'|trans }}' aria-label='{{ 'Show tagged experiments'|trans }}' href='experiments.php?mode=show&tags[]={{ tag.tag|url_encode }}'>
                   <i class='fas fa-external-link-square-alt'></i>
                 </a>
               </td>
               <td>
-                <a title='{{ 'Show tagged items'|trans }}' href='database.php?mode=show&tags[]={{ tag.tag|url_encode }}'>
+                <a title='{{ 'Show tagged items'|trans }}' aria-label='{{ 'Show tagged items'|trans }}' href='database.php?mode=show&tags[]={{ tag.tag|url_encode }}'>
                   <i class='fas fa-external-link-square-alt'></i>
                 </a>
               </td>
               <td>
-                <a class='mr-1' data-action='destroy-tag' data-tagid='{{ tag.id }}' title='{{ 'Delete'|trans }}'><i class='fas fa-trash-alt'></i></a>
+                <a class='mr-1' data-action='destroy-tag' data-tagid='{{ tag.id }}' title='{{ 'Delete'|trans }}' aria-label='{{ 'Delete'|trans }}'><i class='fas fa-trash-alt'></i></a>
               </td>
             </tr>
           {% endfor %}
