--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -70,7 +70,7 @@
   <div class='modal-dialog modal-xl' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
-        <h5 class='modal-title' id='policiesModalLabel'></h5>
+        <h5 class='modal-title' id='policiesModalLabel'>placeholder</h5>
         <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
           <span aria-hidden='true'>&times;</span>
         </button>
