--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -3,7 +3,7 @@
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
-        <h5 class='modal-title' id='plainTextModalLabel'></h5>
+        <h5 class='modal-title' id='plainTextModalLabel'>placeholder</h5>
         <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
           <span aria-hidden='true'>&times;</span>
         </button>
