--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <p class='footer-left'>
-    <a title='{{ 'Follow eLabFTW on Twitter!'|trans }}' data-action='navigate-twitter' style='color:#343434' href='#'>
-      <i title='Twitter' class='fab fa-x-twitter fa-lg'></i>
+    <a title='{{ 'Follow eLabFTW on X!'|trans }}' href='https://twitter.com/elabftw' style='color:#343434'>
+      <i title='X' class='fab fa-x-twitter fa-lg'></i>
     </a>
 
     <a title='{{ 'Code repository on GitHub'|trans }}' style='color:#343434' href='https://github.com/elabftw/elabftw'>
