avoid ugly wrap

--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -132,7 +132,7 @@
 
     {% if bookableItemData %}
       <div class='col-md-3 ml-auto'>
-        <div class='input-group justify-content-end'>
+        <div class='input-group justify-content-end flex-nowrap'>
           <div class='input-group-prepend'>
             <button class='btn btn-secondary' data-action='remove-param-reload' data-target='item'>X</button>
           </div>
