do not use button as child of link

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -56,7 +56,7 @@
   <div class='col-md-4 mt-2 mt-md-0'>
     <div class='d-flex justify-content-between'>
       <h4>{{ 'Scheduled bookings'|trans }}</h4>
-      <a href='team.php?tab=1'><button type='button' class='btn btn-secondary'>{{ 'Scheduler'|trans }}</button></a>
+      <a href='team.php?tab=1' class='btn btn-secondary'>{{ 'Scheduler'|trans }}</a>
     </div>
     <ul class='list-group mt-1'>
       {% for booking in bookingsArr %}
