move content of app/img into assets/images

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -34,7 +34,7 @@
 {% endif %}
 
 <section class='text-center'>
-  <img src='app/img/logo.png' alt='logo elabftw' class='col-md-3' />
+  <img src='/assets/images/logo.png' alt='logo elabftw' class='col-md-3' />
 
   <!-- Allow user to request access to a team -->
   {% if App.Session.has('initial_team_selection_required') %}
