--- a/src/templates/mfa.html
+++ b/src/templates/mfa.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <section class='text-center'>
-  <img src='app/img/logo.png' alt='elabftw' title='elabftw' class='col-md-3' />
+  <img src='/assets/images/logo.png' alt='elabftw' title='elabftw' class='col-md-3' />
   <h4 class='mt-4'>{{ 'Two Factor Authentication'|trans }}</h4>
   <form method='post' action='app/controllers/LoginController.php' autocomplete='off'>
     <input type='hidden' name='auth_type' value='mfa'>
