--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -26,7 +26,7 @@
 </div>
 
 <section class='text-center'>
-    <img src='app/img/logo.png' alt='elabftw' title='elabftw' class='col-md-3' />
+    <img src='/assets/images/logo.png' alt='elabftw' title='elabftw' class='col-md-3' />
     <h2 class='mb-2 mt-2'>{{ 'Create your account'|trans }}</h2>
     <!-- Register form -->
     {# min pass length minimum, no maximum #}
