--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -17,28 +17,28 @@
   {% endif %}
   <meta name='csrf-token' content='{{ App.Session.get('csrf') }}'/>
   <link rel="manifest" href="/manifest.webmanifest">
-  <link rel="icon" href="app/img/favicon.ico" sizes="any"><!-- 32×32 -->
-  <link rel="icon" href="app/img/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="app/img/apple-touch-icon.png"><!-- 180×180 -->
+  <link rel="icon" href="/assets/images/favicon.ico" sizes="any"><!-- 32×32 -->
+  <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png"><!-- 180×180 -->
 
   <title>{{ App.pageTitle }} - eLabFTW</title>
   <!-- load open vector editor -->
-  <link rel='stylesheet' type='text/css' href='assets/ove/style.css?v={{ v }}'>
-  <script defer src='assets/ove/index.umd.js?v={{ v }}'></script>
+  <link rel='stylesheet' type='text/css' href='/assets/ove/style.css?v={{ v }}'>
+  <script defer src='/assets/ove/index.umd.js?v={{ v }}'></script>
 
   <!-- see builder.js to see what gets inside these files -->
   <!-- CSS -->
-  <link rel='stylesheet' media='all' href='assets/vendor.min.css?v={{ v }}' />
-  <link rel='stylesheet' media='all' href='assets/elabftw.min.css?v={{ v }}' />
+  <link rel='stylesheet' media='all' href='/assets/vendor.min.css?v={{ v }}' />
+  <link rel='stylesheet' media='all' href='/assets/elabftw.min.css?v={{ v }}' />
 
   <!-- all js dependencies bundled by webpack (see builder.js) -->
-  <script defer src='assets/vendor.bundle.js?v={{ v }}'></script>
+  <script defer src='/assets/vendor.bundle.js?v={{ v }}'></script>
   <!-- the main JS bundle with all the elabftw TS code (see builder.js) -->
-  <script defer src='assets/main.bundle.js?v={{ v }}'></script>
+  <script defer src='/assets/main.bundle.js?v={{ v }}'></script>
   <!-- rest of js libs -->
-  <script defer src='assets/jslibs.bundle.js?v={{ v }}'></script>
+  <script defer src='/assets/jslibs.bundle.js?v={{ v }}'></script>
   <!-- chemdoodle -->
-  <script defer src='assets/chemdoodle.min.js?v={{ v }}'></script>
+  <script defer src='/assets/chemdoodle.min.js?v={{ v }}'></script>
 
 </head>
 
