add a label to userExportFormat on profile page

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -77,7 +77,7 @@
 
   {# EXPORT EXPERIMENTS #}
   <h4>{{ 'Export all your experiments'|trans }}</h4>
-  <p class='smallgray mb-4'>{{ 'Select an export format'|trans }}</p>
+  <label for='userExportFormat' class='smallgray mb-4'>{{ 'Select an export format'|trans }}</label>
 
   <div class='input-group mb-4'>
     <select class='form-control' id='userExportFormat' autocomplete='off'>
