binary-setting template: avoid id duplication, replace label wrapper with span

--- a/src/templates/binary-setting.html
+++ b/src/templates/binary-setting.html
@@ -1,13 +1,15 @@
 {# use this template to generate a binary setting for instance config. Set a "slug" and "label" keys. Set also an array "src" so we can check current config. #}
 {# optionally a "model" and "help" #}
+{# "affix" can be used to avoid the same html id attribute #}
 {% set model = model|default('config') %}
 {% set src = src|default(App.Config.configArr) %}
+{% set slugId = slug ~ (affix ? '-' ~ affix) %}
 <div class='d-flex justify-content-between'>
-  <label for='{{ slug }}' class='col-form-label'>{{ label }}</label>
-  <label class='switch ucp-align'>
-    <input type='checkbox' autocomplete='off' data-trigger='change' data-model='{{ model|default('config') }}' data-target='{{ slug }}' {{ src[slug] ? 'checked="checked"' }} id='{{ slug }}'>
+  <label for='{{ slugId }}' class='col-form-label'>{{ label }}</label>
+  <span class='switch ucp-align'>
+    <input type='checkbox' autocomplete='off' data-trigger='change' data-model='{{ model|default('config') }}' data-target='{{ slug }}' {{ src[slug] ? 'checked="checked"' }} id='{{ slugId }}'>
     <span class='slider'></span>
-  </label>
+  </span>
 </div>
 {% if help %}
   <p class='smallgray'>{{ help }}</p>
