fix id saml_base_url -> saml_baseurl

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -579,7 +579,7 @@
 
     <div class='d-flex justify-content-between'>
       <label for='saml_baseurl' class='col-form-label'>{{ 'Base URL'|trans }}</label>
-      <input class='form-control col-md-3' type='url' id='saml_base_url' data-trigger='blur' data-model='config' data-target='saml_baseurl' placeholder='https://elabftw.example.org' value='{{ App.Config.configArr.saml_baseurl }}' />
+      <input class='form-control col-md-3' type='url' id='saml_baseurl' data-trigger='blur' data-model='config' data-target='saml_baseurl' placeholder='https://elabftw.example.org' value='{{ App.Config.configArr.saml_baseurl }}' />
     </div>
     <hr>
 
