move todo statement to twig comment

--- a/src/templates/show-templates-select.html
+++ b/src/templates/show-templates-select.html
@@ -19,7 +19,8 @@
     </div>
   {% endif %}
 
-  <table id='tplTable' class='table' aria-describedby='TODO' data-table-sort='true'>
+  {# TODO: add aria-describedby #}
+  <table id='tplTable' class='table' data-table-sort='true'>
     <thead>
       <tr>
         <th scope='col'>{{ 'Team'|trans }}</th>
