--- a/src/templates/edit-tags.html
+++ b/src/templates/edit-tags.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class='d-flex mb-2 align-items-center mathjax-ignore'>
-    <label for='suggestedTags' class='col-form-label mr-3 edit-mode-label'>{{ 'Suggested tags'|trans }}</label>
+    <span class='col-form-label mr-3 edit-mode-label'>{{ 'Suggested tags'|trans }}</span>
     <div class='mr-2'>
       {% set filteredTags = [] %}
       {% for tag in teamTagsArr %}
