--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -183,7 +183,7 @@
         <div class='row mx-0'><p>{{ 'With selected:'|trans }}</p></div>
         <div class='row mx-0 form-inline'>
           {# CHANGE CATEGORY #}
-          <select data-action='update-catstat-selected-entities' data-target='category' autocomplete='off' class='mr-1 mb-2 form-control'>
+          <select aria-label='{{ 'Change category'|trans }}' data-action='update-catstat-selected-entities' data-target='category' autocomplete='off' class='mr-1 mb-2 form-control'>
             <option selected disabled>
               {{ 'Change category'|trans }}
             </option>
@@ -192,7 +192,7 @@
             {% endfor %}
           </select>
           {# CHANGE STATUS #}
-          <select data-action='update-catstat-selected-entities' data-target='status' autocomplete='off' class='mr-1 mb-2 form-control'>
+          <select aria-label='{{ 'Change status'|trans }}' data-action='update-catstat-selected-entities' data-target='status' autocomplete='off' class='mr-1 mb-2 form-control'>
             <option selected disabled>
               {{ 'Change status'|trans }}
             </option>
@@ -202,7 +202,7 @@
           </select>
 
           {# Change visibility #}
-          <select data-action='update-visibility-selected-entities' autocomplete='off' class='mr-1 mb-2 form-control'>
+          <select aria-label='{{ 'Change visibility'|trans }}' data-action='update-visibility-selected-entities' autocomplete='off' class='mr-1 mb-2 form-control'>
             <option selected disabled>{{ 'Change visibility'|trans }}</option>
             {% for key, value in visibilityArr %}
               <option value='{{ key }}'>{{ value }}</option>
@@ -210,7 +210,7 @@
           </select>
 
           {# Export #}
-          <select data-action='export-selected-entities' autocomplete='off' class='mr-1 mb-2 form-control'>
+          <select aria-label='{{ 'Export'|trans }}' data-action='export-selected-entities' autocomplete='off' class='mr-1 mb-2 form-control'>
             <option selected disabled>{{ 'Export'|trans }}</option>
             <option value='eln'>{{ 'ELN Archive'|trans }}</option>
             <option value='zip'>{{ 'ZIP Archive'|trans }}</option>
@@ -221,13 +221,13 @@
           </select>
 
           {# Add a tag #}
-          <input type='text' id='createTagInputMultiple' class='createTagInputMultiple mr-1 mb-2 form-control' data-autocomplete='tags' placeholder='{{ 'Add a tag'|trans }}' />
+          <input type='text' aria-label='{{ 'Add a tag'|trans }}' id='createTagInputMultiple' class='createTagInputMultiple mr-1 mb-2 form-control' data-autocomplete='tags' placeholder='{{ 'Add a tag'|trans }}' />
 
           {# Add a link #}
           <div class='input-group mb-2 mr-2'>
-            <input type='text' id='addLinkItemsInput' data-endpoint='items_links' class='form-control linkInputMultiple' placeholder='{{ 'Add a link'|trans }}' />
+            <input type='text' aria-label='{{ 'Add a link'|trans }}' id='addLinkItemsInput' data-endpoint='items_links' class='form-control linkInputMultiple' placeholder='{{ 'Add a link'|trans }}' />
             <div class='input-group-append'>
-              <select id='addLinkCatFilter' class='brl-none form-control'>
+              <select id='addLinkCatFilter' class='brl-none form-control' aria-label='{{ 'Limit category'|trans }}'>
                 <option selected value=''>{{ 'Any category'|trans }}</option>
                 {% for cat in itemsCategoryArr %}
                   <option value='{{ cat.id }}'>{{ cat.title|raw }}</option>
@@ -238,9 +238,9 @@
 
           {# Add an experiment link #}
           <div class='input-group mb-2 mr-2'>
-            <input type='text' id='addLinkExpInput' data-endpoint='experiments_links' class='form-control linkInputMultiple' placeholder='{{ 'Link to an experiment'|trans }}' />
+            <input type='text' aria-label='{{ 'Link to an experiment'|trans }}' id='addLinkExpInput' data-endpoint='experiments_links' class='form-control linkInputMultiple' placeholder='{{ 'Link to an experiment'|trans }}' />
             <div class='input-group-append'>
-              <select id='addLinkOwnerFilter' class='brl-none form-control'>
+              <select id='addLinkOwnerFilter' class='brl-none form-control' aria-label='{{ 'Limit author'|trans }}'>
                 <option selected value=''>{{ 'Any author'|trans }}</option>
                 {% for user in usersArr %}
                   <option value='{{ user.userid }}'>{{ user.fullname }}</option>
