--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -144,7 +144,7 @@
             <span class='input-group-text'><i class='fas fa-magnifying-glass'></i></span>
           </div>
           <div class='input-group-prepend' style='max-width:33%;'>
-            <select id='addLinkExpCatFilter' class='brl-none brr-none form-control'>
+            <select id='addLinkExpCatFilter' class='brl-none brr-none form-control' aria-label='Limit author'>
               <option selected value=''>{{ 'Any author'|trans }}</option>
               {% for user in usersArr %}
                 <option value='{{ user.userid }}'>{{ user.fullname }}</option>
@@ -206,7 +206,7 @@
           <span class='input-group-text'><i class='fas fa-magnifying-glass'></i></span>
         </div>
         <div class='input-group-prepend' style='min-width: 10%;max-width:33%;'>
-          <select id='addLinkCatFilter' class='brr-none brl-none form-control'>
+          <select id='addLinkCatFilter' class='brr-none brl-none form-control' aria-label='{{ 'Limit category'|trans }}'>
             <option selected value=''>{{ 'Any category'|trans }}</option>
             {% for cat in itemsCategoryArr %}
               <option value='{{ cat.id }}'>{{ cat.title|raw }}</option>
