--- a/src/templates/edit-tags.html
+++ b/src/templates/edit-tags.html
@@ -29,7 +29,7 @@
       {% endfor %}
 
       {% for tag in filteredTags|slice(0, 30) %}
-        <a class='tag margin-1px opacity-8 {{ loop.last ? 'mr-2' }} {{ tag.is_favorite ? 'favorite' }}' data-action='add-suggested-tag' data-tagid='{{ tag.tag_id }}'>{{ tag.tag|raw }}</a>
+        <a class='tag margin-1px opacity-8 {{- loop.last ? ' mr-2' }} {{- tag.is_favorite ? ' favorite' }}' data-action='add-suggested-tag' data-tagid='{{ tag.tag_id }}'>{{ tag.tag|raw }}</a>
       {%- endfor -%}
     </div>
   </div>
