--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -2,7 +2,7 @@
 <div class='modal fade' id='fieldBuilderModal' tabindex='-1' role='dialog' aria-labelledby='fieldBuilderLabel' aria-hidden='true'>
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
-      <form id='newFieldForm'>
+      <form id ='newFieldForm' class='new-field-form'>
         <div class='modal-header'>
           <h5 class='modal-title' id='fieldBuilderLabel'><i class='fas fa-fw fa-trowel'></i> {{ 'Add an extra field'|trans }}</h5>
           <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
@@ -146,7 +146,7 @@
 <div class='modal fade' id='fieldLoaderModal' tabindex='-1' role='dialog' aria-labelledby='fieldLoaderLabel' aria-hidden='true'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
-      <form id='newFieldForm'>
+      <form class='new-field-form'>
         <div class='modal-header'>
           <h4 class='modal-title' id='fieldLoaderLabel'><i class='fas fa-fw fa-truck-ramp-box'></i> {{ 'Load extra fields'|trans }}</h4>
           <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
