--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -109,27 +109,22 @@
                 {% for link in Entity.entityData.experiments_links %}
                   {% set randomId = random() %}
                   <li class='list-group-item' id='parent_{{ randomId }}'>
-                    <div class='float-right ml-1'>
+                    <div class='d-flex align-items-center'>
+                      <i class='fas fa-link mr-1'></i>
+                      <span class='item-category' style='color:#{{ link.mainattr_color }}'>{{ link.mainattr_title|raw }}</span>&#160;-&#160;<a href='experiments.php?mode=view&id={{ link.itemid }}' class='mr-auto'>
+                      {{ link.title|raw }}</a>
                       {# toggle body #}
-                      <span data-type='experiments' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' class='rounded p-2 hl-hover-gray'>
-                        <i class='fas fa-plus-square'></i>
-                      </span>
+                      <button type='button' data-type='experiments' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' class='btn btn-link rounded p-2 hl-hover-gray'>
+                        <i class='fas fa-fw fa-plus-square'></i></button>
                       {% if mode != 'edit-template' %}
-                        <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}' class='rounded p-2 hl-hover-gray'>
-                          <i class='fas fa-arrows-down-to-line'></i>
-                        </a>
-
-                        <a data-action='import-link-body' data-endpoint='experiments' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}' class='rounded p-2 hl-hover-gray'>
-                          <i class='fas fa-lg fa-file-import'></i>
-                        </a>
+                        <button type='button' data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}' class='btn btn-link rounded p-2 hl-hover-gray'>
+                          <i class='fas fa-fw fa-arrows-down-to-line'></i></button>
+                        <button type='button' data-action='import-link-body' data-endpoint='experiments' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}' class='btn btn-link rounded p-2 hl-hover-gray'>
+                          <i class='fas fa-fw fa-lg fa-file-import'></i></button>
                       {% endif %}
-                      <a data-action='destroy-link' data-endpoint='experiments_links' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}' class='rounded p-2 hl-hover-gray'>
-                        <i class='fas fa-lg fa-trash-alt'></i>
-                      </a>
+                      <button type='button' data-action='destroy-link' data-endpoint='experiments_links' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}' class='btn btn-link rounded p-2 hl-hover-gray'>
+                        <i class='fas fa-fw fa-lg fa-trash-alt'></i></button>
                     </div>
-                    <i class='fas fa-link mr-1'></i>
-                    <span class='item-category' style='color:#{{ link.mainattr_color }}'>{{ link.mainattr_title|raw }}</span> - <a href='experiments.php?mode=view&id={{ link.itemid }}'>
-                    {{ link.title|raw }}</a>
                     {# container to hold the body of the entity if it is toggled with the +/- icon #}
                     {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
                     <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'><div></div></div>
@@ -172,26 +167,22 @@
               {% for link in Entity.entityData.items_links %}
                 {% set randomId = random() %}
                 <li class='list-group-item' id='parent_{{ randomId }}'>
-                  <div class='float-right ml-1'>
+                  <div class='d-flex align-items-center'>
+                    <i class='fas fa-link mr-1'></i>
+                    <span class='item-category' style='color:#{{ link.mainattr_color }}'>{{ link.mainattr_title|raw }}</span>&#160;-&#160;<a href='database.php?mode=view&id={{ link.itemid }}' class='mr-auto'>
+                    {{ link.title|raw }}</a>
                     {# toggle body #}
-                    <span data-type='items' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' class='rounded p-2 hl-hover-gray'>
-                      <i class='fas fa-plus-square'></i>
-                    </span>
+                    <button type='button' data-type='items' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' class='btn btn-link rounded p-2 hl-hover-gray'>
+                      <i class='fas fa-fw fa-plus-square'></i></button>
                     {% if mode != 'edit-template' %}
-                      <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}' class='rounded p-2 hl-hover-gray'>
-                        <i class='fas fa-arrows-down-to-line'></i>
-                      </a>
-                      <a data-action='import-link-body' data-endpoint='items' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}' class='rounded p-2 hl-hover-gray'>
-                        <i class='fas fa-lg fa-file-import'></i>
-                      </a>
+                      <button type='button' data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}' class='btn btn-link rounded p-2 hl-hover-gray'>
+                        <i class='fas fa-fw fa-arrows-down-to-line'></i></button>
+                      <button type='button' data-action='import-link-body' data-endpoint='items' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}' class='btn btn-link rounded p-2 hl-hover-gray'>
+                        <i class='fas fa-fw fa-lg fa-file-import'></i></button>
                     {% endif %}
-                    <a data-action='destroy-link' data-endpoint='items_links' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}' class='rounded p-2 hl-hover-gray'>
-                      <i class='fas fa-lg fa-trash-alt'></i>
-                    </a>
+                    <button type='button' data-action='destroy-link' data-endpoint='items_links' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}' class='btn btn-link rounded p-2 hl-hover-gray'>
+                      <i class='fas fa-fw fa-lg fa-trash-alt'></i></button>
                   </div>
-                  <i class='fas fa-link mr-1'></i>
-                  <span class='item-category' style='color:#{{ link.mainattr_color }}'>{{ link.mainattr_title|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
-                  {{ link.title|raw }}</a>
                   {# container to hold the body of the entity if it is toggled with the +/- icon #}
                   {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
                   <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'><div></div></div>
