--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -106,6 +106,9 @@
     <div class='col-md-3'>
       {# CATEGORY #}
       <form>
+        {% if App.Config.configArr.debug -%}
+          <!-- [html-validate-disable-block element-permitted-content -- suppress error from select picker: div child of button] -->
+        {%- endif %}
         <select name='cat' class='autosubmit mr-1 form-control selectpicker' data-show-subtext='true' data-live-search='true' aria-label='Filter category'>
           <option value=''>{{ 'Filter by type'|trans }}</option>
           {% for category in bookableItemsTypes %}
@@ -119,6 +122,9 @@
     <div class='col-md-3'>
       {# ITEM LIST #}
       <form>
+        {% if App.Config.configArr.debug -%}
+          <!-- [html-validate-disable-block element-permitted-content -- suppress error from select picker: div child of button] -->
+        {%- endif %}
         <select id='itemSelect' name='item' class='autosubmit mr-1 form-control selectpicker' data-show-subtext='true' data-live-search='true' aria-label='Filter item'>
           <option value=''>{{ 'Select an equipment'|trans }}</option>
           {% for item in itemsArr %}
