--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -77,6 +77,9 @@
 
     <span data-action='toggle-next'><i class='fas fa-fw fa-info-circle'></i></span><span hidden><a target='_blank' rel='noopener' href='https://doc.elabftw.net/metadata.html'>{{ 'See documentation about extra fields.'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></span>
     <h6 id='jsonEditorTitle'></h6>
+    {% if App.Config.configArr.debug -%}
+      <!-- [html-validate-disable-block no-deprecated-attr -- suppress errors from jsonEditor] -->
+    {%- endif %}
     <div id='jsonEditorContainer' data-preload-json='1'></div>
   </div>
 </section>
