--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -450,6 +450,9 @@
       {% if not configArr[slug] %}
         {{ 'Note: the text below is a template and must be edited and saved.'|trans|msg('ok', false) }}
       {% endif %}
+      {% if configArr.debug -%}
+        <!-- [html-validate-disable-block element-permitted-content, no-deprecated-attr, prefer-native-element -- suppress errors from tinymce] -->
+      {%- endif %}
       <textarea id='{{ slug }}Input' class='mceditable'>
         {{ configArr[slug]|default('Set your text here.')|raw }}
       </textarea>
