--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -16,10 +16,10 @@
     <meta http-equiv='refresh' content='{{ App.Config.configArr.autologout_time }};url=app/logout.php' />
   {% endif %}
   <meta name='csrf-token' content='{{ App.Session.get('csrf') }}'/>
-  <link rel="manifest" href="/manifest.webmanifest">
-  <link rel="icon" href="/assets/images/favicon.ico" sizes="any"><!-- 32×32 -->
-  <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png"><!-- 180×180 -->
+  <link rel='manifest' href='/manifest.webmanifest'>
+  <link rel='icon' href='/assets/images/favicon.ico' sizes='any'>{# 32×32 #}
+  <link rel='icon' href='/assets/images/favicon.svg' type='image/svg+xml'>
+  <link rel='apple-touch-icon' href='/assets/images/apple-touch-icon.png'>{# 180×180 #}
 
   <title>{{ App.pageTitle }} - eLabFTW</title>
   {# load open vector editor #}
@@ -111,7 +111,7 @@
         <div class='nav-item dropdown'>
           <a class='nav-link dropdown-toggle' href='#' id='navbarDropdownHelp' role='button' aria-label='{{ 'Help menu'|trans }}' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'><i class='fas fa-circle-question fa-2x'></i></a>
           <div class='dropdown-menu dropdown-menu-right' aria-labelledby='navbarDropdownHelp'>
-            <a class='dropdown-item' href="{{ constant('Elabftw\\Elabftw\\App::WHATSNEWLINK') }}" target='_blank' rel='noopener'><i class='fas fa-newspaper fa-fw'></i> {{ "What's new"|trans }}</a>
+            <a class='dropdown-item' href='{{ constant('Elabftw\\Elabftw\\App::WHATSNEWLINK') }}' target='_blank' rel='noopener'><i class='fas fa-newspaper fa-fw'></i> {{ "What's new"|trans }}</a>
             <a class='dropdown-item' data-action='toggle-modal' data-target='helpModal'><i class='fas fa-question-circle fa-fw'></i> {{ 'Help'|trans }}</a>
             <a class='dropdown-item' href='https://doc.elabftw.net' target='_blank' rel='noopener'><i class='fas fa-book fa-fw'></i> {{ 'Documentation'|trans }}</a>
             <a class='dropdown-item' href='https://doc.elabftw.net/api.html' target='_blank' rel='noopener'><i class='fas fa-book fa-fw'></i> API {{ 'Documentation'|trans }}</a>
