harmonize template select layout

--- a/src/templates/show-templates-select.html
+++ b/src/templates/show-templates-select.html
@@ -34,14 +34,13 @@
         <tr>
           <td>{{ template.team_name }}</td>
           <td>
-            <a href='?tab=3&mode=view&templateid={{ template.id }}'><span class='p-2 rounded hl-hover-gray'><i class='fas fa-eye'></i></span></a>
+            <a href='?tab=3&mode=view&templateid={{ template.id }}'><span class='p-2 rounded hl-hover-gray'><i class='fas fa-eye fa-fw'></i></span></a>
             {% if App.Request.getScriptName|split('/')|last == 'ucp.php' %}
-              <a href='?tab=3&mode=edit&templateid={{ template.id }}'><span class='p-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></span></a>
+              <a href='?tab=3&mode=edit&templateid={{ template.id }}'><span class='p-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt fa-fw'></i></span></a>
             {% endif %}
               {# clickable toggle pin button #}
-              <span title='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ template.id }}' class='{{ template.is_pinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-1 rounded'>
-                <i class='fas fa-thumbtack {{ not template.is_pinned ? 'color-weak' }} fa-fw'></i>
-              </span>
+              <span title='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ template.id }}' class='{{ template.is_pinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 rounded'>
+                <i class='fas fa-thumbtack {{ not template.is_pinned ? 'color-weak' }} fa-fw'></i></span>
               {{ template.title|raw }}</td>
           <td>
             <span class='category-button rounded p-1' style='--bg:#{{ template.category_color }}'>{{ template.category_title|raw }}</span>
