--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -34,6 +34,8 @@
 </head>
 
 <body>
+{# when this disappears from the viewport, scroll to top button appears #}
+<div id='scrollTopBtnAnchor'></div>
 
 {# container-fluid is from bootstrap #}
 <div id='container' class='container-fluid'>
