--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -37,15 +37,13 @@
       {% for link in Entity.entityData.experiments_links %}
         {% set randomId = random() %}
         <div class='d-flex mb-4' id='parent_{{ randomId }}'>
-          <div class='align-self-center mr-2'>
+          <div class='mr-2'>
             <i class='fas fa-link fa-fw'></i>
           </div>
           <div>
-            <div class='item-category' style='color:#{{ link.color|raw }}'>{{ link.category|raw }}</div>
-            <div>
-              {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
-              <a href='experiments.php?mode=view&id={{ link.itemid }}' class='text-dark'>{{ link.title|raw }}</a>
-            </div>
+            {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
+            <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
+            <a href='experiments.php?mode=view&id={{ link.itemid }}' class='text-dark'>{{ link.title|raw }}</a>
           </div>
           {# toggle body #}
           <div class='ml-auto align-self-center mr-3'>
@@ -74,15 +72,13 @@
       {% for link in Entity.entityData.items_links %}
         {% set randomId = random() %}
         <div class='d-flex mb-4' id='parent_{{ randomId }}'>
-          <div class='align-self-center mr-2'>
+          <div class='mr-2'>
             <i class='fas fa-link fa-fw'></i>
           </div>
           <div>
-            <div class='item-category' style='color:#{{ link.color|raw }}'>{{ link.category|raw }}</div>
-            <div>
-              {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
-              <a href='database.php?mode=view&id={{ link.itemid }}' class='text-dark'>{{ link.title|raw }}</a>
-            </div>
+            {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
+            <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
+            <a href='database.php?mode=view&id={{ link.itemid }}' class='text-dark'>{{ link.title|raw }}</a>
           </div>
           {# toggle body #}
           <div class='ml-auto align-self-center mr-3'>
@@ -114,14 +110,12 @@
         {% for link in relatedExperimentsArr %}
           {% set randomId = random() %}
           <div class='d-flex mb-4' id='parent_{{ randomId }}'>
-            <div class='align-self-center mr-2'>
+            <div class='mr-2'>
               <i class='fas fa-link fa-fw'></i>
             </div>
             <div>
-              <div class='item-category' style='color:#{{ link.color|raw }}'>{{ link.category|raw }}</div>
-              <div>
-                <a href='experiments.php?mode=view&id={{ link.entityid }}' class='text-dark'>{{ link.title|raw }}</a>
-              </div>
+              <span class='catstat-btn category-btn mr-1' style='--bg: #{{ link.category_color }}'>{{ link.category_title|raw }}</span>
+              <a href='experiments.php?mode=view&id={{ link.entityid }}' class='text-dark'>{{ link.title|raw }}</a>
             </div>
             {# toggle body #}
             <div class='ml-auto align-self-center mr-3'>
@@ -137,10 +131,11 @@
       </div>
     </div>
 
+    <!-- TODO FIXME
     <div class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
       <a href='experiments.php?mode=show&related={{ Entity.id }}'>{{ 'Show related experiments'|trans }}</a>
-    </div>
+    </div-->
     <hr>
   {% endif %}
 
@@ -156,10 +151,8 @@
               <i class='fas fa-link fa-fw'></i>
             </div>
             <div>
-              <div class='item-category' style='color:#{{ link.color|raw }}'>{{ link.category|raw }}</div>
-              <div>
-                <a href='database.php?mode=view&id={{ link.entityid }}' class='text-dark'>{{ link.title|raw }}</a>
-              </div>
+              <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
+              <a href='database.php?mode=view&id={{ link.entityid }}' class='text-dark'>{{ link.title|raw }}</a>
             </div>
             {# toggle body #}
             <div class='ml-auto align-self-center mr-3'>
@@ -175,10 +168,11 @@
       </div>
     </div>
 
+    <!-- TODO FIXME
     <div class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
       <a href='database.php?mode=show&related={{ Entity.id }}'>{{ 'Show related items'|trans }}</a>
-    </div>
+    </div-->
     <hr>
   {% endif %}
 
