--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -20,9 +20,9 @@
     </div>
     {% if experimentsCategoryArr %}
       <h5>{{ 'Browse by category'|trans }}</h5>
-      <div class='d-flex my-2'>
+      <div class='d-flex my-2 flex-wrap lh-150'>
         {% for category in experimentsCategoryArr %}
-        <a href='experiments.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='category-button rounded p-1 mr-2'>{{ category.title|raw }}</a>
+        <a href='experiments.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='catstat-btn category-btn mr-2'>{{ category.title|raw }}</a>
         {% endfor %}
       </div>
       <hr>
@@ -30,7 +30,7 @@
     <h5>{{ 'Last modified experiments'|trans }}</h5>
     <ul class='list-group mt-1'>
       {% for experiment in experimentsArr %}
-      <a href='experiments.php?mode=view&id={{ experiment.id }}' class='list-group-item hl-hover-gray breakable'><span style='--bg: #{{ experiment.color }}' class='category-button rounded p-1 mr-2'>{{ experiment.mainattr_title|raw }}</span>{{ experiment.title|raw }} <span title='{{ experiment.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
+      <a href='experiments.php?mode=view&id={{ experiment.id }}' class='list-group-item hl-hover-gray breakable'>{% if experiment.category_title %}<span style='--bg: #{{ experiment.category_color }}' class='catstat-btn category-btn mr-2'>{{ experiment.category_title|raw }}</span>{% endif %}{{ experiment.title|raw }} <span title='{{ experiment.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
       {% endfor %}
     </ul>
   </div>
@@ -40,16 +40,16 @@
       {% include 'create-new.html' with {'entityPage': 'database.php'} %}
     </div>
     <h5>{{ 'Browse by category'|trans }}</h5>
-    <div class='d-flex my-2'>
+    <div class='d-flex my-2 flex-wrap lh-150'>
       {% for category in categoryArr %}
-      <a href='database.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='category-button rounded p-1 mr-2'>{{ category.title|raw }}</a>
+      <a href='database.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='catstat-btn category-btn  mr-2'>{{ category.title|raw }}</a>
       {% endfor %}
     </div>
     <hr>
     <h5>{{ 'Last modified resources'|trans }}</h5>
     <ul class='list-group mt-1'>
       {% for item in itemsArr %}
-      <a href='database.php?mode=view&id={{ item.id }}' class='list-group-item hl-hover-gray breakable'><span style='--bg: #{{ item.color }}' class='category-button rounded p-1 mr-2'>{{ item.mainattr_title }}</span>{{ item.title|raw }} <span title='{{ item.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
+      <a href='database.php?mode=view&id={{ item.id }}' class='list-group-item hl-hover-gray breakable'>{% if item.category_title %}<span style='--bg: #{{ item.category_color }}' class='catstat-btn category-btn mr-2'>{{ item.category_title }}</span>{% endif %}{{ item.title|raw }} <span title='{{ item.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
       {% endfor %}
     </ul>
   </div>
